Fix: Build failures after OpenRewrite execution