@@ -1,14 +1,13 @@
 package com.example;
 
-import java.util.Arrays;
 import java.util.List;
 
 public class LegacyApplication {
 
     public static void main(String[] args) {
-        UserService service = new UserService();
+        var service = new UserService();
 
-        List<User> users = Arrays.asList(
+        var users = List.of(
                 new User("Ana", 25),
                 new User("Bruno", 17),
                 new User("Carlos", 30)
